--- a/students-performance.ipynb
+++ b/students-performance.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2b86b3aa",
+   "id": "8e819ade",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2022-04-20T00:24:07.390283Z",
-     "iopub.status.busy": "2022-04-20T00:24:07.389356Z",
-     "iopub.status.idle": "2022-04-20T00:24:07.408423Z",
-     "shell.execute_reply": "2022-04-20T00:24:07.407492Z"
+     "iopub.execute_input": "2022-04-26T00:02:06.660110Z",
+     "iopub.status.busy": "2022-04-26T00:02:06.659704Z",
+     "iopub.status.idle": "2022-04-26T00:02:06.676602Z",
+     "shell.execute_reply": "2022-04-26T00:02:06.676094Z"
     },
     "papermill": {
-     "duration": 0.028833,
-     "end_time": "2022-04-20T00:24:07.410984",
+     "duration": 0.030655,
+     "end_time": "2022-04-26T00:02:06.679240",
      "exception": false,
-     "start_time": "2022-04-20T00:24:07.382151",
+     "start_time": "2022-04-26T00:02:06.648585",
      "status": "completed"
     },
     "tags": []
@@ -54,19 +54,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4e332b00",
+   "id": "671240d4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-04-20T00:24:07.424294Z",
-     "iopub.status.busy": "2022-04-20T00:24:07.423859Z",
-     "iopub.status.idle": "2022-04-20T00:24:07.442794Z",
-     "shell.execute_reply": "2022-04-20T00:24:07.442055Z"
+     "iopub.execute_input": "2022-04-26T00:02:06.699752Z",
+     "iopub.status.busy": "2022-04-26T00:02:06.699148Z",
+     "iopub.status.idle": "2022-04-26T00:02:06.716476Z",
+     "shell.execute_reply": "2022-04-26T00:02:06.715594Z"
     },
     "papermill": {
-     "duration": 0.028147,
-     "end_time": "2022-04-20T00:24:07.445035",
+     "duration": 0.029177,
+     "end_time": "2022-04-26T00:02:06.718746",
      "exception": false,
-     "start_time": "2022-04-20T00:24:07.416888",
+     "start_time": "2022-04-26T00:02:06.689569",
      "status": "completed"
     },
     "tags": []
@@ -77,21 +77,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3d142e1a",
+   "metadata": {
+    "papermill": {
+     "duration": 0.008108,
+     "end_time": "2022-04-26T00:02:06.735357",
+     "exception": false,
+     "start_time": "2022-04-26T00:02:06.727249",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "### First glances on the dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9eb0ee7d",
+   "id": "97662ae3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-04-20T00:24:07.457466Z",
-     "iopub.status.busy": "2022-04-20T00:24:07.457037Z",
-     "iopub.status.idle": "2022-04-20T00:24:07.480392Z",
-     "shell.execute_reply": "2022-04-20T00:24:07.479747Z"
+     "iopub.execute_input": "2022-04-26T00:02:06.753917Z",
+     "iopub.status.busy": "2022-04-26T00:02:06.753103Z",
+     "iopub.status.idle": "2022-04-26T00:02:06.774562Z",
+     "shell.execute_reply": "2022-04-26T00:02:06.774021Z"
     },
     "papermill": {
-     "duration": 0.032495,
-     "end_time": "2022-04-20T00:24:07.482752",
+     "duration": 0.033215,
+     "end_time": "2022-04-26T00:02:06.776755",
      "exception": false,
-     "start_time": "2022-04-20T00:24:07.450257",
+     "start_time": "2022-04-26T00:02:06.743540",
      "status": "completed"
     },
     "tags": []
@@ -212,6 +229,219 @@
    "source": [
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9e98a1e2",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-04-26T00:02:06.796583Z",
+     "iopub.status.busy": "2022-04-26T00:02:06.795691Z",
+     "iopub.status.idle": "2022-04-26T00:02:06.802193Z",
+     "shell.execute_reply": "2022-04-26T00:02:06.801352Z"
+    },
+    "papermill": {
+     "duration": 0.018282,
+     "end_time": "2022-04-26T00:02:06.803961",
+     "exception": false,
+     "start_time": "2022-04-26T00:02:06.785679",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender                         object\n",
+       "race/ethnicity                 object\n",
+       "parental level of education    object\n",
+       "lunch                          object\n",
+       "test preparation course        object\n",
+       "math score                      int64\n",
+       "reading score                   int64\n",
+       "writing score                   int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "58967a1d",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-04-26T00:02:06.824738Z",
+     "iopub.status.busy": "2022-04-26T00:02:06.824169Z",
+     "iopub.status.idle": "2022-04-26T00:02:06.857112Z",
+     "shell.execute_reply": "2022-04-26T00:02:06.856211Z"
+    },
+    "papermill": {
+     "duration": 0.045696,
+     "end_time": "2022-04-26T00:02:06.859109",
+     "exception": false,
+     "start_time": "2022-04-26T00:02:06.813413",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>math score</th>\n",
+       "      <th>reading score</th>\n",
+       "      <th>writing score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1000.00000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>66.08900</td>\n",
+       "      <td>69.169000</td>\n",
+       "      <td>68.054000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>15.16308</td>\n",
+       "      <td>14.600192</td>\n",
+       "      <td>15.195657</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>57.00000</td>\n",
+       "      <td>59.000000</td>\n",
+       "      <td>57.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>66.00000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>69.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>77.00000</td>\n",
+       "      <td>79.000000</td>\n",
+       "      <td>79.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>100.00000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       math score  reading score  writing score\n",
+       "count  1000.00000    1000.000000    1000.000000\n",
+       "mean     66.08900      69.169000      68.054000\n",
+       "std      15.16308      14.600192      15.195657\n",
+       "min       0.00000      17.000000      10.000000\n",
+       "25%      57.00000      59.000000      57.750000\n",
+       "50%      66.00000      70.000000      69.000000\n",
+       "75%      77.00000      79.000000      79.000000\n",
+       "max     100.00000     100.000000     100.000000"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "21b06c04",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-04-26T00:02:06.881040Z",
+     "iopub.status.busy": "2022-04-26T00:02:06.880771Z",
+     "iopub.status.idle": "2022-04-26T00:02:06.888841Z",
+     "shell.execute_reply": "2022-04-26T00:02:06.888148Z"
+    },
+    "papermill": {
+     "duration": 0.020909,
+     "end_time": "2022-04-26T00:02:06.890519",
+     "exception": false,
+     "start_time": "2022-04-26T00:02:06.869610",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender                         0\n",
+       "race/ethnicity                 0\n",
+       "parental level of education    0\n",
+       "lunch                          0\n",
+       "test preparation course        0\n",
+       "math score                     0\n",
+       "reading score                  0\n",
+       "writing score                  0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Identifying if the dataset has null values\n",
+    "\n",
+    "df.isnull().sum()\n",
+    "\n",
+    "# Looks like our dataset has all rows duly filled."
+   ]
   }
  ],
  "metadata": {
@@ -234,14 +464,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 12.308972,
-   "end_time": "2022-04-20T00:24:08.210577",
+   "duration": 10.543301,
+   "end_time": "2022-04-26T00:02:07.521353",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2022-04-20T00:23:55.901605",
+   "start_time": "2022-04-26T00:01:56.978052",
    "version": "2.3.4"
   }
  },
