Kaggle Notebook | students-performance | Version 7

--- a/students-performance.ipynb
+++ b/students-performance.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "77aaf19d",
+   "id": "4fa7eaea",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2022-05-09T23:37:14.288688Z",
-     "iopub.status.busy": "2022-05-09T23:37:14.288348Z",
-     "iopub.status.idle": "2022-05-09T23:37:15.432062Z",
-     "shell.execute_reply": "2022-05-09T23:37:15.430768Z"
+     "iopub.execute_input": "2022-05-11T23:05:29.718461Z",
+     "iopub.status.busy": "2022-05-11T23:05:29.717808Z",
+     "iopub.status.idle": "2022-05-11T23:05:31.234537Z",
+     "shell.execute_reply": "2022-05-11T23:05:31.233149Z"
     },
     "papermill": {
-     "duration": 1.161483,
-     "end_time": "2022-05-09T23:37:15.435094",
+     "duration": 1.540296,
+     "end_time": "2022-05-11T23:05:31.238210",
      "exception": false,
-     "start_time": "2022-05-09T23:37:14.273611",
+     "start_time": "2022-05-11T23:05:29.697914",
      "status": "completed"
     },
     "tags": []
@@ -55,19 +55,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f7563d1b",
+   "id": "479c3086",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-09T23:37:15.461279Z",
-     "iopub.status.busy": "2022-05-09T23:37:15.460986Z",
-     "iopub.status.idle": "2022-05-09T23:37:15.477356Z",
-     "shell.execute_reply": "2022-05-09T23:37:15.476617Z"
+     "iopub.execute_input": "2022-05-11T23:05:31.276423Z",
+     "iopub.status.busy": "2022-05-11T23:05:31.276158Z",
+     "iopub.status.idle": "2022-05-11T23:05:31.298463Z",
+     "shell.execute_reply": "2022-05-11T23:05:31.297484Z"
     },
     "papermill": {
-     "duration": 0.031653,
-     "end_time": "2022-05-09T23:37:15.479609",
+     "duration": 0.044201,
+     "end_time": "2022-05-11T23:05:31.301170",
      "exception": false,
-     "start_time": "2022-05-09T23:37:15.447956",
+     "start_time": "2022-05-11T23:05:31.256969",
      "status": "completed"
     },
     "tags": []
@@ -79,13 +79,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d9d46c8",
+   "id": "9eb5bf57",
    "metadata": {
     "papermill": {
-     "duration": 0.011751,
-     "end_time": "2022-05-09T23:37:15.503586",
+     "duration": 0.017736,
+     "end_time": "2022-05-11T23:05:31.336682",
      "exception": false,
-     "start_time": "2022-05-09T23:37:15.491835",
+     "start_time": "2022-05-11T23:05:31.318946",
      "status": "completed"
     },
     "tags": []
@@ -97,19 +97,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8d753b05",
+   "id": "b2ee6c90",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-09T23:37:15.529441Z",
-     "iopub.status.busy": "2022-05-09T23:37:15.528668Z",
-     "iopub.status.idle": "2022-05-09T23:37:15.548810Z",
-     "shell.execute_reply": "2022-05-09T23:37:15.548184Z"
+     "iopub.execute_input": "2022-05-11T23:05:31.373813Z",
+     "iopub.status.busy": "2022-05-11T23:05:31.373306Z",
+     "iopub.status.idle": "2022-05-11T23:05:31.403420Z",
+     "shell.execute_reply": "2022-05-11T23:05:31.401984Z"
     },
     "papermill": {
-     "duration": 0.035651,
-     "end_time": "2022-05-09T23:37:15.551165",
+     "duration": 0.051475,
+     "end_time": "2022-05-11T23:05:31.406163",
      "exception": false,
-     "start_time": "2022-05-09T23:37:15.515514",
+     "start_time": "2022-05-11T23:05:31.354688",
      "status": "completed"
     },
     "tags": []
@@ -234,19 +234,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "33f698dd",
+   "id": "584eb9dd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-09T23:37:15.578157Z",
-     "iopub.status.busy": "2022-05-09T23:37:15.577613Z",
-     "iopub.status.idle": "2022-05-09T23:37:15.584027Z",
-     "shell.execute_reply": "2022-05-09T23:37:15.583409Z"
+     "iopub.execute_input": "2022-05-11T23:05:31.447409Z",
+     "iopub.status.busy": "2022-05-11T23:05:31.446870Z",
+     "iopub.status.idle": "2022-05-11T23:05:31.454353Z",
+     "shell.execute_reply": "2022-05-11T23:05:31.453431Z"
     },
     "papermill": {
-     "duration": 0.02204,
-     "end_time": "2022-05-09T23:37:15.585951",
+     "duration": 0.029641,
+     "end_time": "2022-05-11T23:05:31.456323",
      "exception": false,
-     "start_time": "2022-05-09T23:37:15.563911",
+     "start_time": "2022-05-11T23:05:31.426682",
      "status": "completed"
     },
     "tags": []
@@ -278,19 +278,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d527e1ac",
+   "id": "1cef5672",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-09T23:37:15.613795Z",
-     "iopub.status.busy": "2022-05-09T23:37:15.613243Z",
-     "iopub.status.idle": "2022-05-09T23:37:15.643782Z",
-     "shell.execute_reply": "2022-05-09T23:37:15.643167Z"
+     "iopub.execute_input": "2022-05-11T23:05:31.496323Z",
+     "iopub.status.busy": "2022-05-11T23:05:31.495682Z",
+     "iopub.status.idle": "2022-05-11T23:05:31.532971Z",
+     "shell.execute_reply": "2022-05-11T23:05:31.532283Z"
     },
     "papermill": {
-     "duration": 0.046533,
-     "end_time": "2022-05-09T23:37:15.645562",
+     "duration": 0.060484,
+     "end_time": "2022-05-11T23:05:31.535646",
      "exception": false,
-     "start_time": "2022-05-09T23:37:15.599029",
+     "start_time": "2022-05-11T23:05:31.475162",
      "status": "completed"
     },
     "tags": []
@@ -399,19 +399,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7181e0b9",
+   "id": "c46bb79d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-09T23:37:15.674501Z",
-     "iopub.status.busy": "2022-05-09T23:37:15.673856Z",
-     "iopub.status.idle": "2022-05-09T23:37:15.682306Z",
-     "shell.execute_reply": "2022-05-09T23:37:15.681659Z"
+     "iopub.execute_input": "2022-05-11T23:05:31.577703Z",
+     "iopub.status.busy": "2022-05-11T23:05:31.577147Z",
+     "iopub.status.idle": "2022-05-11T23:05:31.586431Z",
+     "shell.execute_reply": "2022-05-11T23:05:31.585448Z"
     },
     "papermill": {
-     "duration": 0.025174,
-     "end_time": "2022-05-09T23:37:15.684352",
+     "duration": 0.033401,
+     "end_time": "2022-05-11T23:05:31.589079",
      "exception": false,
-     "start_time": "2022-05-09T23:37:15.659178",
+     "start_time": "2022-05-11T23:05:31.555678",
      "status": "completed"
     },
     "tags": []
@@ -446,13 +446,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e23ba388",
+   "id": "4b6f3e53",
    "metadata": {
     "papermill": {
-     "duration": 0.013706,
-     "end_time": "2022-05-09T23:37:15.712258",
+     "duration": 0.019794,
+     "end_time": "2022-05-11T23:05:31.630261",
      "exception": false,
-     "start_time": "2022-05-09T23:37:15.698552",
+     "start_time": "2022-05-11T23:05:31.610467",
      "status": "completed"
     },
     "tags": []
@@ -464,19 +464,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "316f279a",
+   "id": "8d25896b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-09T23:37:15.742484Z",
-     "iopub.status.busy": "2022-05-09T23:37:15.742052Z",
-     "iopub.status.idle": "2022-05-09T23:37:15.937784Z",
-     "shell.execute_reply": "2022-05-09T23:37:15.936929Z"
+     "iopub.execute_input": "2022-05-11T23:05:31.673587Z",
+     "iopub.status.busy": "2022-05-11T23:05:31.672580Z",
+     "iopub.status.idle": "2022-05-11T23:05:31.869700Z",
+     "shell.execute_reply": "2022-05-11T23:05:31.868806Z"
     },
     "papermill": {
-     "duration": 0.213715,
-     "end_time": "2022-05-09T23:37:15.940142",
+     "duration": 0.221975,
+     "end_time": "2022-05-11T23:05:31.872364",
      "exception": false,
-     "start_time": "2022-05-09T23:37:15.726427",
+     "start_time": "2022-05-11T23:05:31.650389",
      "status": "completed"
     },
     "tags": []
@@ -519,19 +519,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1421fc24",
+   "id": "720757cf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-09T23:37:15.972352Z",
-     "iopub.status.busy": "2022-05-09T23:37:15.971939Z",
-     "iopub.status.idle": "2022-05-09T23:37:16.129092Z",
-     "shell.execute_reply": "2022-05-09T23:37:16.128216Z"
+     "iopub.execute_input": "2022-05-11T23:05:31.918647Z",
+     "iopub.status.busy": "2022-05-11T23:05:31.918110Z",
+     "iopub.status.idle": "2022-05-11T23:05:32.054405Z",
+     "shell.execute_reply": "2022-05-11T23:05:32.053765Z"
     },
     "papermill": {
-     "duration": 0.175769,
-     "end_time": "2022-05-09T23:37:16.131296",
+     "duration": 0.162198,
+     "end_time": "2022-05-11T23:05:32.056793",
      "exception": false,
-     "start_time": "2022-05-09T23:37:15.955527",
+     "start_time": "2022-05-11T23:05:31.894595",
      "status": "completed"
     },
     "tags": []
@@ -574,19 +574,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0ec5ea3e",
+   "id": "d9dd750c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-09T23:37:16.165701Z",
-     "iopub.status.busy": "2022-05-09T23:37:16.165413Z",
-     "iopub.status.idle": "2022-05-09T23:37:16.324730Z",
-     "shell.execute_reply": "2022-05-09T23:37:16.323906Z"
+     "iopub.execute_input": "2022-05-11T23:05:32.108832Z",
+     "iopub.status.busy": "2022-05-11T23:05:32.108272Z",
+     "iopub.status.idle": "2022-05-11T23:05:32.241097Z",
+     "shell.execute_reply": "2022-05-11T23:05:32.240316Z"
     },
     "papermill": {
-     "duration": 0.179862,
-     "end_time": "2022-05-09T23:37:16.327531",
+     "duration": 0.16053,
+     "end_time": "2022-05-11T23:05:32.243622",
      "exception": false,
-     "start_time": "2022-05-09T23:37:16.147669",
+     "start_time": "2022-05-11T23:05:32.083092",
      "status": "completed"
     },
     "tags": []
@@ -625,6 +625,78 @@
     "            palette=[\"m\", \"g\"],\n",
     "            data=df)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d2ccb02",
+   "metadata": {
+    "papermill": {
+     "duration": 0.02417,
+     "end_time": "2022-05-11T23:05:32.296965",
+     "exception": false,
+     "start_time": "2022-05-11T23:05:32.272795",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "With the df.describe() method and the bloxplots here plotted one can see that the distribution is very similar to each matter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f1f6b82",
+   "metadata": {
+    "papermill": {
+     "duration": 0.023791,
+     "end_time": "2022-05-11T23:05:32.345210",
+     "exception": false,
+     "start_time": "2022-05-11T23:05:32.321419",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "# How's the proportion between men and women?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d187dbf9",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-05-11T23:05:32.401047Z",
+     "iopub.status.busy": "2022-05-11T23:05:32.400249Z",
+     "iopub.status.idle": "2022-05-11T23:05:32.409411Z",
+     "shell.execute_reply": "2022-05-11T23:05:32.408695Z"
+    },
+    "papermill": {
+     "duration": 0.039275,
+     "end_time": "2022-05-11T23:05:32.412164",
+     "exception": false,
+     "start_time": "2022-05-11T23:05:32.372889",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "female    0.518\n",
+       "male      0.482\n",
+       "Name: gender, dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['gender'].value_counts('gender')"
+   ]
   }
  ],
  "metadata": {
@@ -647,14 +719,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 13.376772,
-   "end_time": "2022-05-09T23:37:17.066312",
+   "duration": 17.149828,
+   "end_time": "2022-05-11T23:05:33.564347",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2022-05-09T23:37:03.689540",
+   "start_time": "2022-05-11T23:05:16.414519",
    "version": "2.3.4"
   }
  },
