Kaggle Notebook | students-performance | Version 8

--- a/students-performance.ipynb
+++ b/students-performance.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4fa7eaea",
+   "id": "e2f25101",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2022-05-11T23:05:29.718461Z",
-     "iopub.status.busy": "2022-05-11T23:05:29.717808Z",
-     "iopub.status.idle": "2022-05-11T23:05:31.234537Z",
-     "shell.execute_reply": "2022-05-11T23:05:31.233149Z"
+     "iopub.execute_input": "2022-05-16T23:34:13.394823Z",
+     "iopub.status.busy": "2022-05-16T23:34:13.394452Z",
+     "iopub.status.idle": "2022-05-16T23:34:14.522063Z",
+     "shell.execute_reply": "2022-05-16T23:34:14.521153Z"
     },
     "papermill": {
-     "duration": 1.540296,
-     "end_time": "2022-05-11T23:05:31.238210",
+     "duration": 1.148642,
+     "end_time": "2022-05-16T23:34:14.524680",
      "exception": false,
-     "start_time": "2022-05-11T23:05:29.697914",
+     "start_time": "2022-05-16T23:34:13.376038",
      "status": "completed"
     },
     "tags": []
@@ -55,19 +55,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "479c3086",
+   "id": "17f21316",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-11T23:05:31.276423Z",
-     "iopub.status.busy": "2022-05-11T23:05:31.276158Z",
-     "iopub.status.idle": "2022-05-11T23:05:31.298463Z",
-     "shell.execute_reply": "2022-05-11T23:05:31.297484Z"
+     "iopub.execute_input": "2022-05-16T23:34:14.559450Z",
+     "iopub.status.busy": "2022-05-16T23:34:14.559152Z",
+     "iopub.status.idle": "2022-05-16T23:34:14.579002Z",
+     "shell.execute_reply": "2022-05-16T23:34:14.578251Z"
     },
     "papermill": {
-     "duration": 0.044201,
-     "end_time": "2022-05-11T23:05:31.301170",
+     "duration": 0.03954,
+     "end_time": "2022-05-16T23:34:14.581276",
      "exception": false,
-     "start_time": "2022-05-11T23:05:31.256969",
+     "start_time": "2022-05-16T23:34:14.541736",
      "status": "completed"
     },
     "tags": []
@@ -79,13 +79,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9eb5bf57",
+   "id": "f0584aee",
    "metadata": {
     "papermill": {
-     "duration": 0.017736,
-     "end_time": "2022-05-11T23:05:31.336682",
+     "duration": 0.015813,
+     "end_time": "2022-05-16T23:34:14.613836",
      "exception": false,
-     "start_time": "2022-05-11T23:05:31.318946",
+     "start_time": "2022-05-16T23:34:14.598023",
      "status": "completed"
     },
     "tags": []
@@ -97,19 +97,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b2ee6c90",
+   "id": "dbb3649b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-11T23:05:31.373813Z",
-     "iopub.status.busy": "2022-05-11T23:05:31.373306Z",
-     "iopub.status.idle": "2022-05-11T23:05:31.403420Z",
-     "shell.execute_reply": "2022-05-11T23:05:31.401984Z"
+     "iopub.execute_input": "2022-05-16T23:34:14.648384Z",
+     "iopub.status.busy": "2022-05-16T23:34:14.647517Z",
+     "iopub.status.idle": "2022-05-16T23:34:14.669432Z",
+     "shell.execute_reply": "2022-05-16T23:34:14.668452Z"
     },
     "papermill": {
-     "duration": 0.051475,
-     "end_time": "2022-05-11T23:05:31.406163",
+     "duration": 0.041664,
+     "end_time": "2022-05-16T23:34:14.671854",
      "exception": false,
-     "start_time": "2022-05-11T23:05:31.354688",
+     "start_time": "2022-05-16T23:34:14.630190",
      "status": "completed"
     },
     "tags": []
@@ -234,19 +234,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "584eb9dd",
+   "id": "c23856d3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-11T23:05:31.447409Z",
-     "iopub.status.busy": "2022-05-11T23:05:31.446870Z",
-     "iopub.status.idle": "2022-05-11T23:05:31.454353Z",
-     "shell.execute_reply": "2022-05-11T23:05:31.453431Z"
+     "iopub.execute_input": "2022-05-16T23:34:14.706819Z",
+     "iopub.status.busy": "2022-05-16T23:34:14.706518Z",
+     "iopub.status.idle": "2022-05-16T23:34:14.714189Z",
+     "shell.execute_reply": "2022-05-16T23:34:14.713191Z"
     },
     "papermill": {
-     "duration": 0.029641,
-     "end_time": "2022-05-11T23:05:31.456323",
+     "duration": 0.027476,
+     "end_time": "2022-05-16T23:34:14.716065",
      "exception": false,
-     "start_time": "2022-05-11T23:05:31.426682",
+     "start_time": "2022-05-16T23:34:14.688589",
      "status": "completed"
     },
     "tags": []
@@ -278,19 +278,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1cef5672",
+   "id": "b55cf589",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-11T23:05:31.496323Z",
-     "iopub.status.busy": "2022-05-11T23:05:31.495682Z",
-     "iopub.status.idle": "2022-05-11T23:05:31.532971Z",
-     "shell.execute_reply": "2022-05-11T23:05:31.532283Z"
+     "iopub.execute_input": "2022-05-16T23:34:14.751959Z",
+     "iopub.status.busy": "2022-05-16T23:34:14.751254Z",
+     "iopub.status.idle": "2022-05-16T23:34:14.782033Z",
+     "shell.execute_reply": "2022-05-16T23:34:14.781493Z"
     },
     "papermill": {
-     "duration": 0.060484,
-     "end_time": "2022-05-11T23:05:31.535646",
+     "duration": 0.050574,
+     "end_time": "2022-05-16T23:34:14.783751",
      "exception": false,
-     "start_time": "2022-05-11T23:05:31.475162",
+     "start_time": "2022-05-16T23:34:14.733177",
      "status": "completed"
     },
     "tags": []
@@ -399,19 +399,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c46bb79d",
+   "id": "3bebf9c6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-11T23:05:31.577703Z",
-     "iopub.status.busy": "2022-05-11T23:05:31.577147Z",
-     "iopub.status.idle": "2022-05-11T23:05:31.586431Z",
-     "shell.execute_reply": "2022-05-11T23:05:31.585448Z"
+     "iopub.execute_input": "2022-05-16T23:34:14.820721Z",
+     "iopub.status.busy": "2022-05-16T23:34:14.820062Z",
+     "iopub.status.idle": "2022-05-16T23:34:14.829400Z",
+     "shell.execute_reply": "2022-05-16T23:34:14.828643Z"
     },
     "papermill": {
-     "duration": 0.033401,
-     "end_time": "2022-05-11T23:05:31.589079",
+     "duration": 0.029909,
+     "end_time": "2022-05-16T23:34:14.831301",
      "exception": false,
-     "start_time": "2022-05-11T23:05:31.555678",
+     "start_time": "2022-05-16T23:34:14.801392",
      "status": "completed"
     },
     "tags": []
@@ -446,13 +446,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b6f3e53",
+   "id": "b1dc60d9",
    "metadata": {
     "papermill": {
-     "duration": 0.019794,
-     "end_time": "2022-05-11T23:05:31.630261",
+     "duration": 0.017595,
+     "end_time": "2022-05-16T23:34:14.866849",
      "exception": false,
-     "start_time": "2022-05-11T23:05:31.610467",
+     "start_time": "2022-05-16T23:34:14.849254",
      "status": "completed"
     },
     "tags": []
@@ -464,19 +464,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8d25896b",
+   "id": "c8377983",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-11T23:05:31.673587Z",
-     "iopub.status.busy": "2022-05-11T23:05:31.672580Z",
-     "iopub.status.idle": "2022-05-11T23:05:31.869700Z",
-     "shell.execute_reply": "2022-05-11T23:05:31.868806Z"
+     "iopub.execute_input": "2022-05-16T23:34:14.904696Z",
+     "iopub.status.busy": "2022-05-16T23:34:14.904242Z",
+     "iopub.status.idle": "2022-05-16T23:34:15.096969Z",
+     "shell.execute_reply": "2022-05-16T23:34:15.096384Z"
     },
     "papermill": {
-     "duration": 0.221975,
-     "end_time": "2022-05-11T23:05:31.872364",
+     "duration": 0.214023,
+     "end_time": "2022-05-16T23:34:15.099046",
      "exception": false,
-     "start_time": "2022-05-11T23:05:31.650389",
+     "start_time": "2022-05-16T23:34:14.885023",
      "status": "completed"
     },
     "tags": []
@@ -519,19 +519,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "720757cf",
+   "id": "2d5563dd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-11T23:05:31.918647Z",
-     "iopub.status.busy": "2022-05-11T23:05:31.918110Z",
-     "iopub.status.idle": "2022-05-11T23:05:32.054405Z",
-     "shell.execute_reply": "2022-05-11T23:05:32.053765Z"
+     "iopub.execute_input": "2022-05-16T23:34:15.139086Z",
+     "iopub.status.busy": "2022-05-16T23:34:15.138788Z",
+     "iopub.status.idle": "2022-05-16T23:34:15.299159Z",
+     "shell.execute_reply": "2022-05-16T23:34:15.298262Z"
     },
     "papermill": {
-     "duration": 0.162198,
-     "end_time": "2022-05-11T23:05:32.056793",
+     "duration": 0.183002,
+     "end_time": "2022-05-16T23:34:15.301246",
      "exception": false,
-     "start_time": "2022-05-11T23:05:31.894595",
+     "start_time": "2022-05-16T23:34:15.118244",
      "status": "completed"
     },
     "tags": []
@@ -574,19 +574,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d9dd750c",
+   "id": "ef906af3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-11T23:05:32.108832Z",
-     "iopub.status.busy": "2022-05-11T23:05:32.108272Z",
-     "iopub.status.idle": "2022-05-11T23:05:32.241097Z",
-     "shell.execute_reply": "2022-05-11T23:05:32.240316Z"
+     "iopub.execute_input": "2022-05-16T23:34:15.343885Z",
+     "iopub.status.busy": "2022-05-16T23:34:15.343286Z",
+     "iopub.status.idle": "2022-05-16T23:34:15.498099Z",
+     "shell.execute_reply": "2022-05-16T23:34:15.497210Z"
     },
     "papermill": {
-     "duration": 0.16053,
-     "end_time": "2022-05-11T23:05:32.243622",
+     "duration": 0.178837,
+     "end_time": "2022-05-16T23:34:15.500400",
      "exception": false,
-     "start_time": "2022-05-11T23:05:32.083092",
+     "start_time": "2022-05-16T23:34:15.321563",
      "status": "completed"
     },
     "tags": []
@@ -628,13 +628,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d2ccb02",
+   "id": "482b2b69",
    "metadata": {
     "papermill": {
-     "duration": 0.02417,
-     "end_time": "2022-05-11T23:05:32.296965",
+     "duration": 0.021279,
+     "end_time": "2022-05-16T23:34:15.543176",
      "exception": false,
-     "start_time": "2022-05-11T23:05:32.272795",
+     "start_time": "2022-05-16T23:34:15.521897",
      "status": "completed"
     },
     "tags": []
@@ -645,13 +645,137 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f1f6b82",
+   "id": "7c916815",
    "metadata": {
     "papermill": {
-     "duration": 0.023791,
-     "end_time": "2022-05-11T23:05:32.345210",
+     "duration": 0.020816,
+     "end_time": "2022-05-16T23:34:15.586965",
      "exception": false,
-     "start_time": "2022-05-11T23:05:32.321419",
+     "start_time": "2022-05-16T23:34:15.566149",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "# Correlation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0ac7b1ce",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-05-16T23:34:15.631318Z",
+     "iopub.status.busy": "2022-05-16T23:34:15.630737Z",
+     "iopub.status.idle": "2022-05-16T23:34:15.711643Z",
+     "shell.execute_reply": "2022-05-16T23:34:15.710797Z"
+    },
+    "papermill": {
+     "duration": 0.105575,
+     "end_time": "2022-05-16T23:34:15.713870",
+     "exception": false,
+     "start_time": "2022-05-16T23:34:15.608295",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_a770e_row0_col0, #T_a770e_row1_col1, #T_a770e_row2_col2 {\n",
+       "  background-color: #08306b;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_a770e_row0_col1, #T_a770e_row0_col2, #T_a770e_row2_col0 {\n",
+       "  background-color: #f7fbff;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_a770e_row1_col0 {\n",
+       "  background-color: #e8f1fa;\n",
+       "  color: #000000;\n",
+       "}\n",
+       "#T_a770e_row1_col2 {\n",
+       "  background-color: #1c6bb0;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_a770e_row2_col1 {\n",
+       "  background-color: #2070b4;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_a770e_\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th class=\"col_heading level0 col0\" >math score</th>\n",
+       "      <th class=\"col_heading level0 col1\" >reading score</th>\n",
+       "      <th class=\"col_heading level0 col2\" >writing score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_a770e_level0_row0\" class=\"row_heading level0 row0\" >math score</th>\n",
+       "      <td id=\"T_a770e_row0_col0\" class=\"data row0 col0\" >1.000000</td>\n",
+       "      <td id=\"T_a770e_row0_col1\" class=\"data row0 col1\" >0.817580</td>\n",
+       "      <td id=\"T_a770e_row0_col2\" class=\"data row0 col2\" >0.802642</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_a770e_level0_row1\" class=\"row_heading level0 row1\" >reading score</th>\n",
+       "      <td id=\"T_a770e_row1_col0\" class=\"data row1 col0\" >0.817580</td>\n",
+       "      <td id=\"T_a770e_row1_col1\" class=\"data row1 col1\" >1.000000</td>\n",
+       "      <td id=\"T_a770e_row1_col2\" class=\"data row1 col2\" >0.954598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_a770e_level0_row2\" class=\"row_heading level0 row2\" >writing score</th>\n",
+       "      <td id=\"T_a770e_row2_col0\" class=\"data row2 col0\" >0.802642</td>\n",
+       "      <td id=\"T_a770e_row2_col1\" class=\"data row2 col1\" >0.954598</td>\n",
+       "      <td id=\"T_a770e_row2_col2\" class=\"data row2 col2\" >1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7f699ad10510>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.corr().style.background_gradient(cmap=\"Blues\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d5a558b",
+   "metadata": {
+    "papermill": {
+     "duration": 0.021326,
+     "end_time": "2022-05-16T23:34:15.757181",
+     "exception": false,
+     "start_time": "2022-05-16T23:34:15.735855",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "We can see that there is a good positive correlation among the variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81c998f2",
+   "metadata": {
+    "papermill": {
+     "duration": 0.021345,
+     "end_time": "2022-05-16T23:34:15.800228",
+     "exception": false,
+     "start_time": "2022-05-16T23:34:15.778883",
      "status": "completed"
     },
     "tags": []
@@ -662,20 +786,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "d187dbf9",
+   "execution_count": 11,
+   "id": "8484acbd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-11T23:05:32.401047Z",
-     "iopub.status.busy": "2022-05-11T23:05:32.400249Z",
-     "iopub.status.idle": "2022-05-11T23:05:32.409411Z",
-     "shell.execute_reply": "2022-05-11T23:05:32.408695Z"
+     "iopub.execute_input": "2022-05-16T23:34:15.845786Z",
+     "iopub.status.busy": "2022-05-16T23:34:15.845226Z",
+     "iopub.status.idle": "2022-05-16T23:34:15.854294Z",
+     "shell.execute_reply": "2022-05-16T23:34:15.853382Z"
     },
     "papermill": {
-     "duration": 0.039275,
-     "end_time": "2022-05-11T23:05:32.412164",
+     "duration": 0.034377,
+     "end_time": "2022-05-16T23:34:15.856423",
      "exception": false,
-     "start_time": "2022-05-11T23:05:32.372889",
+     "start_time": "2022-05-16T23:34:15.822046",
      "status": "completed"
     },
     "tags": []
@@ -689,7 +813,7 @@
        "Name: gender, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,14 +843,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 17.149828,
-   "end_time": "2022-05-11T23:05:33.564347",
+   "duration": 13.185868,
+   "end_time": "2022-05-16T23:34:16.600366",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2022-05-11T23:05:16.414519",
+   "start_time": "2022-05-16T23:34:03.414498",
    "version": "2.3.4"
   }
  },
